# fixrobot

./: .gitignore  .travis.yml  INSTALL  LICENSE  LICENSE.txt  README.md  github_actions_requirements.txt  platform.py  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-actions.yaml
FIXRobot/: FIXRobot.py  FIXRobotClass.py
FIXRobot/tests/: FIX42RobotUnitTest_ShouldFail.py  FIX42RobotUnitTest_ShouldPass.py  FIX50RobotUnitTest_ShouldFail.py  FIX50RobotUnitTest_ShouldPass.py  conftest.py  runPyTestAll.sh  runTest.sh  runTestAll.bat  test_FIX42RobotPyTest_ShouldFail.py  test_FIX42RobotPyTest_ShouldPass.py  test_FIX50RobotPyTest_ShouldFail.py  test_FIX50RobotPyTest_ShouldPass.py
docs/: FIXRobot.html  FIXRobot.tests.html  Makefile  README.html  doc.html  generate_doc.sh  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: FIXRobot.rst  FIXRobot.tests.rst  README.rst  conf.py  index.rst  modules.rst
env/: CLIENT-EXECUTOR-FIX42.ini  CLIENT-EXECUTOR-FIX50.ini  DEFAULTMESSAGES.ini  EXECUTOR-CLIENT-FIX42.ini  EXECUTOR-CLIENT-FIX50.ini  connections.ini
fixrobot/: fixrobot.py
fixrobot/tests/: FIX42RobotUnitTest_ShouldFail.py  FIX42RobotUnitTest_ShouldPass.py  FIX50RobotUnitTest_ShouldFail.py  FIX50RobotUnitTest_ShouldPass.py  conftest.py  runPyTest.bat  runPyTest.sh  test_FIX42RobotPyTest_ShouldFail.py  test_FIX42RobotPyTest_ShouldPass.py  test_FIX50RobotPyTest_ShouldFail.py  (+1 more)
spec/: FIX40.xml  FIX41.xml  FIX43.xml  FIX44.xml  FIX50.xml  FIX50SP1.xml  FIX50SP2.xml
